# banana-felix

./: .gitignore
banana-canvas/: .gitignore  DESIGN.md  PUBLISHING.md  index.html  jiaojiao.md  package-lock.json  package.json
banana-canvas/docs/superpowers/plans/: 2026-06-03-panorama-node.md
banana-canvas/src/: App.tsx  main.tsx
banana-canvas/src-tauri/: Cargo.toml  tauri.conf.json
banana-canvas/src-tauri/capabilities/: default.json
banana-canvas/src-tauri/icons/: icon.icns
banana-canvas/src-tauri/src/: lib.rs  main.rs
banana-canvas/src/hooks/: useAnchorText.ts  useGenerationPoll.ts  useMaterialIndex.ts  useMentionParser.ts  useNodeSettings.ts  useProjectAutoSave.ts  useUpstreamNodes.ts
banana-canvas/src/services/: apiService.image.test.ts  apiService.ts  apiService.video.test.ts  chatService.ts  imagePromptReverse.test.ts  imagePromptReverse.ts  optionsParser.test.ts  optionsParser.ts  projectAutoSave.test.ts  projectAutoSave.ts  projectService.ts  sessionStorage.ts  skillRegistry.test.ts  skillRegistry.ts
banana-canvas/src/stores/: agentStore.ts  graphStore.ts  historyStore.ts  jobStore.ts  projectStore.ts  promptPresetStore.ts  uiStore.ts  workspaceStore.ts
banana-canvas/src/styles/: index.css  uiTheme.ts
banana-canvas/src/types/: agent.ts  model.ts  node.ts  settings.ts
banana-canvas/src/utils/: caretMenuPosition.ts  edgeDedup.test.ts  edgeDedup.ts  materialNaming.test.ts  materialNaming.ts  nodeConvert.ts  saveImageToLocal.test.ts  saveImageToLocal.ts
banana-canvas/update-template/: RELEASE_GUIDE.md  latest.json
(+81 files in other folders)
